<resources>
<string name="app_name">ArfolyamInfromalo</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="vendeg">Üdvözöllek vendég</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="exchange">Árfolyam</string>
    <string name="saved">Mentés</string>
    <string name="logout">Kijelentkezés\n</string>
    <string name="arfolyam_text">Árfolyamok</string>
    <string name="amount">összeg</string>
    <string name="swap">Átváltás</string>
    <string name="save_all_text">A táblázat sorainak mentése</string>
    <string name="bejelentkezes_text">Bejelentkezés</string>
    <string name="email_text">Email Cím</string>
    <string name="jelszo_text">Jelszó</string>
    <string name="jelszo_megerosites_text">Jelszó megerősítése</string>
    <string name="regisztracio_text">Regisztráció</string>
    <string name="firebase">Firebase</string>
    <string name="move_data">Adatok feltöltése Firebasere</string>
    <string name="delete_last_data">Utolsó sor törlése</string>
    <string name="key">Kulcs</string>
    <string name="value">Érték</string>
    <string name="android_studio">Android Studio</string>
</resources>