<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6495ED"
    android:orientation="vertical">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/storageSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firebase" />



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/savedRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/moveDataButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_data"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/deleteLastDataButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_last_data"
            android:layout_marginStart="8dp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/main_drawer" />

</LinearLayout>
